dts: imx8mq-nitrogen8m: move linux differences to imx8mq-nitrogen8m-u-boot.dtsi
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/arch/arm/dts/imx8mq-nitrogen8m.dts
+++ b/arch/arm/dts/imx8mq-nitrogen8m.dts
@@ -275,7 +275,6 @@
 
 	pinctrl_sn65dsi83: sn65dsi83grp {
 		fsl,pins = <
-#define GP_I2C4_SN65DSI83_IRQ <&gpio1 1 GPIO_ACTIVE_HIGH>
 #define GPIRQ_I2C4_SN65DSI83	<&gpio1 1 IRQ_TYPE_LEVEL_HIGH>
 			MX8MQ_IOMUXC_GPIO1_IO01_GPIO1_IO1	0x04
 #define GP_I2C4_SN65DSI83_EN	<&gpio3 15 GPIO_ACTIVE_HIGH>
@@ -603,7 +602,7 @@
 		lcdif = &lcdif;
 		mipi = &fb_mipi;
 		mipi_dsi = &mipi_dsi;
-		mipi_dsi_bridge = &mipi_dsi_bridge;
+		mipi_dsi_bridge = &mipi_dsi;
 		mipi_dsi_phy = &dphy;
 		mipi_to_lvds = &mipi_to_lvds;
 		pca9540 = &pca9540;
@@ -611,7 +610,6 @@
 		pwm_mipi = &pwm3;
 		sound_hdmi = &sound_hdmi;
 		spi_lcd = &spi_lcd;
-		t_hdmi = &t_hdmi;
 		t_mipi = &t_mipi;
 		ts_ft5x06 = &ts_ft5x06;
 		ts_ft5x06_2 = &ts_ft5x06_2;
@@ -655,10 +653,6 @@
 		status = "okay";
 	};
 
-	chosen {
-		bootargs = "console=ttymxc0,115200 earlycon=ec_imx6q,0x30860000,115200";
-	};
-
 	gpio-keys {
 		compatible = "gpio-keys";
 		pinctrl-names = "default";
@@ -682,6 +676,12 @@
 	};
 
 	pcie0_refclk: pcie0-refclk {
+		compatible = "fixed-clock";
+		#clock-cells = <0>;
+		clock-frequency = <100000000>;
+	};
+
+	pcie1_refclk: pcie1-refclk {
 		compatible = "fixed-clock";
 		#clock-cells = <0>;
 		clock-frequency = <100000000>;
@@ -794,17 +794,33 @@
 	};
 };
 
-&A53_0 {
-	operating-points = <
-		/* kHz    uV */
-		1500000 1000000
-		1300000 1000000
-		1000000 900000
-		800000  900000
-	>;
+#if 0
+&a53_opp_table {
+	opp-800000000 {
+		opp-microvolt = <1000000>;
+	};
+
+	opp-1000000000 {
+		opp-microvolt = <1000000>;
+	};
 };
 
-#if 0
+&A53_0 {
+	cpu-supply = <&reg_arm_dram>;
+};
+
+&A53_1 {
+	cpu-supply = <&reg_arm_dram>;
+};
+
+&A53_2 {
+	cpu-supply = <&reg_arm_dram>;
+};
+
+&A53_3 {
+	cpu-supply = <&reg_arm_dram>;
+};
+
 &csi1_bridge {
 	fsl,mipi-mode;
 	fsl,two-8bit-sensor-mode;
@@ -832,9 +848,8 @@
 
 &dcss {
 	status = "okay";
-	disp-dev = "hdmi_disp";
 
-	port@0 {
+	port {
 		dcss_out: endpoint {
 			remote-endpoint = <&hdmi_in>;
 		};
@@ -895,26 +910,11 @@
 #endif
 
 &hdmi {
-	compatible = "fsl,imx8mq-hdmi";
+	compatible = "cdn,imx8mq-hdmi";
+	lane-mapping = <0xe4>;
 	status = "okay";
 
-	display-timings {
-		native-mode = <&t_hdmi>;
-
-		t_hdmi: t-hdmi-default {
-			clock-frequency = <74250000>;
-			hactive = <1280>;
-			vactive = <720>;
-			hback-porch = <220>;
-			hfront-porch = <110>;
-			hsync-len = <40>;
-			vback-porch = <20>;
-			vfront-porch = <5>;
-			vsync-len = <5>;
-		};
-	};
-
-	port@0 {
+	port {
 		hdmi_in: endpoint {
 			remote-endpoint = <&dcss_out>;
 		};
@@ -1032,22 +1032,25 @@
 		DVDD-supply = <&reg_vref_3v3>;
 		assigned-clocks = <&clk IMX8MQ_CLK_CLKO2>;
 		assigned-clock-parents = <&clk IMX8MQ_SYS2_PLL_200M>;
-		assigned-clock-rates = <25000000>;
+		assigned-clock-rates = <20000000>;
 		clocks = <&clk IMX8MQ_CLK_CLKO2>;
-		clock-names = "csi_mclk";
+		clock-names = "xclk";
+#if 0
+		compatible = "ovti,ov5640";
+#else
 		compatible = "ovti,ov5640_mipisubdev";
-		csi_id = <0>;
-		mclk = <25000000>;
-		mipi_csi;
+#endif
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_i2c2_ov5640_mipi>;
-		pwn-gpios = GP_CSI1_OV5640_MIPI_POWER_DOWN;
+		powerdown-gpios = GP_CSI1_OV5640_MIPI_POWER_DOWN;
 		reg = <0x3c>;
-		rst-gpios = GP_CSI1_OV5640_MIPI_RESET;
+		reset-gpios = GP_CSI1_OV5640_MIPI_RESET;
 		status = "okay";
 
 		port {
 			ov5640_mipi1_ep: endpoint {
+				clock-lanes = <0>;
+				data-lanes = <1 2>;
 				remote-endpoint = <&mipi1_ov5640_ep>;
 			};
 		};
@@ -1077,22 +1080,26 @@
 		DVDD-supply = <&reg_vref_3v3>;
 		assigned-clocks = <&clk IMX8MQ_CLK_CLKO2>;
 		assigned-clock-parents = <&clk IMX8MQ_SYS2_PLL_200M>;
-		assigned-clock-rates = <25000000>;
+		assigned-clock-rates = <20000000>;
 		clocks = <&clk IMX8MQ_CLK_CLKO2>;
-		clock-names = "csi_mclk";
+		clock-names = "xclk";
+#if 0
+		compatible = "ovti,ov5640";
+#else
 		compatible = "ovti,ov5640_mipisubdev";
 		csi_id = <1>;
-		mclk = <25000000>;
-		mipi_csi;
+#endif
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_i2c3_ov5640_mipi>;
-		pwn-gpios = GP_CSI2_OV5640_MIPI_POWER_DOWN;
+		powerdown-gpios = GP_CSI2_OV5640_MIPI_POWER_DOWN;
 		reg = <0x3c>;
-		rst-gpios = GP_CSI2_OV5640_MIPI_RESET;
+		reset-gpios = GP_CSI2_OV5640_MIPI_RESET;
 		status = "okay";
 
 		port {
 			ov5640_mipi2_ep: endpoint {
+				clock-lanes = <0>;
+				data-lanes = <1 2>;
 				remote-endpoint = <&mipi2_ov5640_ep>;
 			};
 		};
@@ -1217,8 +1224,6 @@
 			#size-cells = <0>;
 
 			lt8912_2: lt8912_2@48 {
-				#address-cells = <1>;
-				#size-cells = <0>;
 				compatible = "lontium,lt8912";
 				display-dsi = <&fb_mipi>;
 				interrupts-extended = GPIRQ_LT8912_2;
@@ -1226,14 +1231,6 @@
 				pinctrl-0 = <&pinctrl_lt8912_2>;
 				reg = <0x48>;
 				reset-gpios = GP_LT8912_2_RESET;
-
-				port@0 {
-					reg = <0>;
-
-					lt8912_2_from_panel: endpoint {
-						remote-endpoint = <&panel_to_lt8912_2>;
-					};
-				};
 			};
 		};
 	};
@@ -1252,21 +1249,11 @@
 			#size-cells = <0>;
 
 			lt8912@48 {
-				#address-cells = <1>;
-				#size-cells = <0>;
 				compatible = "lontium,lt8912";
 				ddc-i2c-bus = <&ddc_i2c_bus>;
 				display-dsi = <&fb_mipi>;
 				reg = <0x48>;
 				reset-gpios = <&max7323 0 GPIO_ACTIVE_LOW>;
-
-				port@0 {
-					reg = <0>;
-
-					lt8912_from_panel: endpoint {
-						remote-endpoint = <&panel_to_lt8912>;
-					};
-				};
 			};
 		};
 
@@ -1330,18 +1317,11 @@
 };
 
 &lcdif {
-	display = <&fb_mipi>;
-	status = "okay";
 	assigned-clocks = <&clk IMX8MQ_CLK_LCDIF_PIXEL>,
 			  <&clk IMX8MQ_VIDEO_PLL1_REF_SEL>;
 	assigned-clock-parents = <&clk IMX8MQ_VIDEO_PLL1_OUT>,
 				 <&clk IMX8MQ_CLK_25M>;
-
-	port@0 {
-		lcdif_out: endpoint {
-			remote-endpoint = <&mipi_dsi_bridge_in>;
-		};
-	};
+	status = "disabled";
 };
 
 #if 0
@@ -1351,8 +1331,8 @@
 	status = "okay";
 	port {
 		mipi1_ov5640_ep: endpoint@1 {
-			remote-endpoint = <&ov5640_mipi1_ep>;
 			data-lanes = <1 2>;
+			remote-endpoint = <&ov5640_mipi1_ep>;
 		};
 
 		csi1_mipi_ep: endpoint@2 {
@@ -1367,8 +1347,8 @@
 	status = "okay";
 	port {
 		mipi2_ov5640_ep: endpoint@1 {
-			remote-endpoint = <&ov5640_mipi2_ep>;
 			data-lanes = <1 2>;
+			remote-endpoint = <&ov5640_mipi2_ep>;
 		};
 
 		csi2_mipi_ep: endpoint@2 {
@@ -1378,32 +1358,8 @@
 };
 #endif
 
-&mipi_dsi_bridge {
-	ports {
-		#address-cells = <1>;
-		#size-cells = <0>;
-
-		port@0 {
-			reg = <0>;
-
-			mipi_dsi_bridge_in: endpoint {
-				remote-endpoint = <&lcdif_out>;
-			};
-		};
-
-		port@1 {
-			reg = <1>;
-
-			mipi_dsi_bridge_out: endpoint {
-				remote-endpoint = <&panel1_in>;
-			};
-		};
-	};
-};
-
 &mipi_dsi {
 	/delete-property/ no_clk_reset;
-	status = "disabled";
 	assigned-clocks = <&clk IMX8MQ_CLK_DSI_PHY_REF>,
 			  <&clk IMX8MQ_CLK_DSI_CORE>,
 			  <&clk IMX8MQ_CLK_DSI_AHB>,
@@ -1418,22 +1374,19 @@
 			       <80000000>,
 			       <0>,
 			       <20000000>;
-	input-source = "lcdif";
+	status = "disabled";
+	#address-cells = <1>;
+	#size-cells = <0>;
 
 	fb_mipi: panel@0 {
-		#address-cells = <1>;
-		#size-cells = <0>;
-
-		backlight= <&backlight_mipi>;
+		backlight = <&backlight_mipi>;
 		bits-per-color = <8>;
-		bits-per-pixel = <24>;
 		bridge-de-active = <0>;
 #if 0
 		bridge-sync-active = <1>;
 #endif
 		bus-format = "rgb888";
-		bus-width = <24>;
-		clocks = <&dsim_clk 0>,
+		clocks = <&dphy 0>,
 			<&clk IMX8MQ_CLK_LCDIF_PIXEL>;
 		clock-names = "mipi_clk", "pixel_clock";
 		compatible = "panel,common";
@@ -1471,38 +1424,27 @@
 		};
 
 		mipi_to_lvds: mipi-to-lvds {
-			#address-cells = <1>;
-			#size-cells = <0>;
 			alias = <&mipi_to_lvds>;
 			enable-gpios = GP_I2C4_SN65DSI83_EN;
 			i2c-address = <0x2c>;
 			i2c-bus = <&i2c4>;
 			interrupts-extended = GPIRQ_I2C4_SN65DSI83;
-			interrupts-gpios = GP_I2C4_SN65DSI83_IRQ;
 			status = "disabled";
 		};
 
+		port {
+			panel1_in: endpoint {
+				remote-endpoint = <&mipi_dsi_out>;
+			};
+		};
+	};
+
+	ports {
 		port@1 {
 			reg = <1>;
 
-			panel1_in: endpoint {
-				remote-endpoint = <&mipi_dsi_bridge_out>;
-			};
-		};
-
-		port@2 {
-			reg = <3>;
-
-			panel_to_lt8912: endpoint {
-				remote-endpoint = <&lt8912_from_panel>;
-			};
-		};
-
-		port@3 {
-			reg = <4>;
-
-			panel_to_lt8912_2: endpoint {
-				remote-endpoint = <&lt8912_2_from_panel>;
+			mipi_dsi_out: endpoint {
+				remote-endpoint = <&panel1_in>;
 			};
 		};
 	};
@@ -1514,6 +1456,13 @@
 };
 
 &pcie0 {
+	assigned-clocks = <&clk IMX8MQ_CLK_PCIE1_AUX>,
+			  <&clk IMX8MQ_CLK_PCIE1_PHY>,
+			  <&clk IMX8MQ_CLK_PCIE1_CTRL>;
+	assigned-clock-parents = <&clk IMX8MQ_SYS2_PLL_50M>,
+				 <&clk IMX8MQ_SYS2_PLL_100M>,
+				 <&clk IMX8MQ_SYS2_PLL_250M>;
+	assigned-clock-rates = <10000000>, <100000000>, <250000000>;
 #if 1
 	clocks = <&clk IMX8MQ_CLK_PCIE1_ROOT>,
 		<&clk IMX8MQ_CLK_PCIE1_AUX>,
@@ -1532,13 +1481,22 @@
 	reset-gpio = GP_PCIE0_RESET;
 	status = "okay";
 };
-#endif
 
-#if 0
 &pcie1 {
-	/* TODO check clock */
+	assigned-clocks = <&clk IMX8MQ_CLK_PCIE2_AUX>,
+			  <&clk IMX8MQ_CLK_PCIE2_PHY>,
+			  <&clk IMX8MQ_CLK_PCIE2_CTRL>;
+	assigned-clock-parents = <&clk IMX8MQ_SYS2_PLL_50M>,
+				 <&clk IMX8MQ_SYS2_PLL_100M>,
+				 <&clk IMX8MQ_SYS2_PLL_250M>;
+	assigned-clock-rates = <10000000>, <100000000>, <250000000>;
+	clocks = <&clk IMX8MQ_CLK_PCIE2_ROOT>,
+		<&clk IMX8MQ_CLK_PCIE2_AUX>,
+		<&clk IMX8MQ_CLK_PCIE2_PHY>,
+		<&pcie1_refclk>;
+	clock-names = "pcie", "pcie_aux", "pcie_phy", "pcie_bus";
 	ext_osc = <1>;
-	hard-wired = <1>;
+	hard-wired;
 	status = "disabled";
 };
 
@@ -1636,7 +1594,6 @@
 };
 #endif
 
-#if 0
 &uart1 { /* console */
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart1>;
@@ -1669,10 +1626,10 @@
 	assigned-clock-parents = <&clk IMX8MQ_SYS1_PLL_80M>;
 	status = "okay";
 };
-#endif
 
 &usb3_phy0 {
 	status = "okay";
+	vbus-supply = <&reg_vref_5v>;
 };
 
 &usb_dwc3_0 {
@@ -1685,6 +1642,7 @@
 
 &usb3_phy1 {
 	status = "okay";
+	vbus-supply = <&reg_vref_5v>;
 };
 
 &usb_dwc3_1 {
@@ -1693,27 +1651,27 @@
 	pinctrl-0 = <&pinctrl_usb3_1>;
 	reset-gpios = GP_USB3_1_HUB_RESET;
 	status = "okay";
+	vbus-supply = <&reg_vref_5v>;
 };
 
 &usdhc1 {
-	cap-mmc-highspeed;
+	assigned-clocks = <&clk IMX8MQ_CLK_USDHC1>;
+	assigned-clock-rates = <400000000>;
 	bus-width = <8>;
-	mmc-ddr-1_8v;
-	mmc-hs200-1_8v;
 	no-mmc-hs400;
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	pinctrl-0 = <&pinctrl_usdhc1>;
 	pinctrl-1 = <&pinctrl_usdhc1_100mhz>;
 	pinctrl-2 = <&pinctrl_usdhc1_200mhz>;
-	reset-gpios = GP_EMMC_RESET;
 	non-removable;
 	vqmmc-1-8-v;
 	vmmc-supply = <&reg_vref_1v8>;
 	status = "okay";
 };
 
-#if 0
 &usdhc2 {
+	assigned-clocks = <&clk IMX8MQ_CLK_USDHC2>;
+	assigned-clock-rates = <200000000>;
 	bus-width = <4>;
 	no-sd-uhs-sdr104;
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
@@ -1728,6 +1686,7 @@
 	vqmmc-1-8-v;
 };
 
+#if 0
 &vpu {
 	power-domains = <&pgc_vpu>;
 	regulator-supply = <&reg_vref_0v9>;
