--- a/arch/arm/dts/imx8mq-nitrogen8m_som.dts
+++ b/arch/arm/dts/imx8mq-nitrogen8m_som.dts
@@ -106,10 +106,8 @@
 			MX8MQ_IOMUXC_SAI5_RXD2_GPIO3_IO23		0xd6
 			/* J13 Pin 4, WL_IRQ, not needed for Silex */
 			MX8MQ_IOMUXC_SAI5_RXD0_GPIO3_IO21		0xd6
-#ifndef CONFIG_USDHC2_SD
 			/* J13 pin 9, SD2_CD */
 			MX8MQ_IOMUXC_SD2_CD_B_GPIO2_IO12		0x41
-#endif
 			/* J13 Pin 41, BT_CLK_REQ */
 			MX8MQ_IOMUXC_SAI5_RXD1_GPIO3_IO22		0xd6
 			/* J13 Pin 42, BT_HOST_WAKE */
@@ -145,7 +143,7 @@
 		>;
 	};
 
-	pinctrl_i2c1d_gt911: i2c4-gt911grp {
+	pinctrl_i2c1d_gt911: i2c1d-gt911grp {
 		fsl,pins = <
 #define GPIRQ_GT911 		<&gpio3 12 IRQ_TYPE_LEVEL_HIGH>
 #define GP_GT911_IRQ 		<&gpio3 12 GPIO_ACTIVE_HIGH>
@@ -156,7 +154,7 @@
 		>;
 	};
 
-	pinctrl_i2c1d_ft5x06: i2c4-ft5x06grp {
+	pinctrl_i2c1d_ft5x06: i2c1d-ft5x06grp {
 		fsl,pins = <
 #define GPIRQ_I2C1D_FT5X06	<&gpio3 12 IRQ_TYPE_EDGE_FALLING>
 #define GP_I2C1D_FT5X06_WAKE	<&gpio3 12 GPIO_ACTIVE_LOW>
@@ -166,9 +164,8 @@
 		>;
 	};
 
-	pinctrl_sn65dsi83: i2c4-sn65dsi83grp {
+	pinctrl_i2c1d_sn65dsi83: i2c1d-sn65dsi83grp {
 		fsl,pins = <
-#define GP_I2C1D_SN65DSI83_IRQ <&gpio1 1 GPIO_ACTIVE_HIGH>
 #define GPIRQ_I2C1D_SN65DSI83	<&gpio1 1 IRQ_TYPE_LEVEL_HIGH>
 			MX8MQ_IOMUXC_GPIO1_IO01_GPIO1_IO1		0x04
 #define GP_I2C1D_SN65DSI83_EN	<&gpio3 15 GPIO_ACTIVE_HIGH>
@@ -176,7 +173,7 @@
 		>;
 	};
 
-	pinctrl_i2c1d_st1633: i2c4-st1633grp {
+	pinctrl_i2c1d_st1633: i2c1d-st1633grp {
 		fsl,pins = <
 #define GPIRQ_ST1633 		<&gpio3 12 IRQ_TYPE_EDGE_FALLING>
 #define GP_ST1633_IRQ 		<&gpio3 12 GPIO_ACTIVE_LOW>
@@ -356,22 +353,12 @@
 		>;
 	};
 
-#ifdef CONFIG_USDHC2_SD
-	pinctrl_reg_usdhc2_vqmmc: reg_usdhc2_vqmmcgrp {
-		fsl,pins = <
-#define GP_USDHC2_VSEL	<&gpio1 8 GPIO_ACTIVE_HIGH>
-			MX8MQ_IOMUXC_GPIO1_IO08_GPIO1_IO8		0x16
-		>;
-	};
-#else
-
 	pinctrl_reg_wlan_vmmc: reg-wlan-vmmcgrp {
 		fsl,pins = <
 #define GP_REG_WLAN_VMMC	<&gpio3 20 GPIO_ACTIVE_HIGH>
 			MX8MQ_IOMUXC_SAI5_RXC_GPIO3_IO20		0x16
 		>;
 	};
-#endif
 
 	pinctrl_sai1: sai1grp {
 		fsl,pins = <
@@ -511,10 +498,6 @@
 			MX8MQ_IOMUXC_SD2_DATA3_USDHC2_DATA3		0xc3
 			/* Bluetooth slow clock */
 			MX8MQ_IOMUXC_GPIO1_IO00_ANAMIX_REF_CLK_32K	0x03
-#ifdef CONFIG_USDHC2_SD
-#define GP_USDHC2_CD	<&gpio2 12 GPIO_ACTIVE_LOW>
-			MX8MQ_IOMUXC_SD2_CD_B_GPIO2_IO12		0x41
-#endif
 		>;
 	};
 
@@ -547,11 +530,6 @@
 	};
 };
 
-#if 0
-/delete-node/ &pgc_gpu;
-/delete-node/ &pgc_vpu;
-#endif
-
 / {
 	model = "Boundary Devices i.MX8MQ Nitrogen8M_som";
 	compatible = "boundary,imx8mq-nitrogen8m_som", "fsl,imx8mq";
@@ -564,12 +542,11 @@
 		lcdif = &lcdif;
 		mipi = &fb_mipi;
 		mipi_dsi = &mipi_dsi;
-		mipi_dsi_bridge = &mipi_dsi_bridge;
+		mipi_dsi_bridge = &mipi_dsi;
 		mipi_dsi_phy = &dphy;
 		mipi_to_lvds = &mipi_to_lvds;
 		pwm_mipi = &pwm3;
 		sound_hdmi = &sound_hdmi;
-		t_hdmi = &t_hdmi;
 		t_mipi = &t_mipi;
 		ts_ft5x06 = &ts_ft5x06;
 		ts_goodix = &ts_goodix;
@@ -614,6 +591,12 @@
 		clock-frequency = <100000000>;
 	};
 
+	pcie1_refclk: pcie1-refclk {
+		compatible = "fixed-clock";
+		#clock-cells = <0>;
+		clock-frequency = <100000000>;
+	};
+
 	reg_usb_otg_vbus: regulator-usb-otg-vbus {
 		compatible = "regulator-fixed";
 		pinctrl-names = "default";
@@ -624,23 +607,6 @@
 		gpio = GP_REG_USB_OTG_VBUS;
 		enable-active-high;
 	};
-
-#ifdef CONFIG_USDHC2_SD
-	reg_usdhc2_vqmmc: regulator-usdhc2-vqmmc {
-		compatible = "regulator-gpio";
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_reg_usdhc2_vqmmc>;
-		regulator-name = "reg_sd2_vsel";
-		regulator-min-microvolt = <1800000>;
-		regulator-max-microvolt = <3300000>;
-		regulator-type = "voltage";
-		regulator-boot-on;
-		regulator-always-on;
-		gpios = GP_USDHC2_VSEL;
-		states = <1800000 0x1
-			  3300000 0x0>;
-	};
-#endif
 
 	reg_vref_0v9: regulator-vref-0v9 {
 		compatible = "regulator-fixed";
@@ -677,7 +643,6 @@
 		regulator-max-microvolt = <5000000>;
 	};
 
-#ifndef CONFIG_USDHC2_SD
 	reg_wlan_vmmc: regulator-wlan-vmmc {
 		compatible = "regulator-fixed";
 		pinctrl-names = "default";
@@ -689,7 +654,6 @@
 		startup-delay-us = <70000>;
 		enable-active-high;
 	};
-#endif
 
 	resmem: reserved-memory {
 		#address-cells = <2>;
@@ -739,62 +703,35 @@
 		hdmi-out;
 		status = "okay";
 	};
+};
 
 #if 0
-	power-domains {
-		#address-cells = <1>;
-		#size-cells = <0>;
-
-		pgc_gpuvpu: power-domain@ffffffff {
-			compatible = "fsl,imx8mq-pm-domain";
-			reg = <0xffffffff>;
-			domain-name = "VPUGPU_PD";
-			dvfs-supply = <&reg_soc_gpu_vpu>;
-			idle-microvolt = <900000 837000 990000>;
-			#address-cells = <1>;
-			#power-domain-cells = <0>;
-			#size-cells = <0>;
-
-			pgc_gpu: power-domain@4 {
-				clocks = <&clk IMX8MQ_CLK_GPU_AXI>,
-					 <&clk IMX8MQ_CLK_GPU_SHADER_DIV>,
-					 <&clk IMX8MQ_CLK_GPU_ROOT>,
-					 <&clk IMX8MQ_CLK_GPU_AHB>;
-				compatible = "fsl,imx8mq-pm-domain";
-				reg = <4>;
-				domain-name = "GPU_PD";
-				operating-points-v2 = <&gpu_opp_table>;
-				#power-domain-cells = <0>;
-			};
-
-			pgc_vpu: power-domain@5 {
-				clocks = <&clk IMX8MQ_CLK_VPU_G1_ROOT>,
-					 <&clk IMX8MQ_CLK_VPU_G2_ROOT>,
-					 <&clk IMX8MQ_CLK_VPU_DEC_ROOT>;
-				compatible = "fsl,imx8mq-pm-domain";
-				reg = <5>;
-				domain-name = "VPU_PD";
-				operating-points-v2 = <&vpu_opp_table_g1>,
-						<&vpu_opp_table_g2>,
-						<&vpu_opp_table_dec>;
-				#power-domain-cells = <0>;
-			};
-		};
+&a53_opp_table {
+	opp-800000000 {
+		opp-microvolt = <1000000>;
 	};
-#endif
+
+	opp-1000000000 {
+		opp-microvolt = <1000000>;
+	};
 };
 
 &A53_0 {
-	operating-points = <
-		/* kHz    uV */
-		1500000 1000000
-		1300000 1000000
-		1000000 900000
-		800000  900000
-	>;
+	cpu-supply = <&reg_arm_dram>;
 };
 
-#if 0
+&A53_1 {
+	cpu-supply = <&reg_arm_dram>;
+};
+
+&A53_2 {
+	cpu-supply = <&reg_arm_dram>;
+};
+
+&A53_3 {
+	cpu-supply = <&reg_arm_dram>;
+};
+
 &csi1_bridge {
 	fsl,mipi-mode;
 	fsl,two-8bit-sensor-mode;
@@ -822,7 +759,6 @@
 
 &dcss {
 	status = "okay";
-	disp-dev = "hdmi_disp";
 
 	port@0 {
 		dcss_out: endpoint {
@@ -883,26 +819,11 @@
 #endif
 
 &hdmi {
-	compatible = "fsl,imx8mq-hdmi";
+	compatible = "cdn,imx8mq-hdmi";
+	lane-mapping = <0xe4>;
 	status = "okay";
 
-	display-timings {
-		native-mode = <&t_hdmi>;
-
-		t_hdmi: t-hdmi-default {
-			clock-frequency = <74250000>;
-			hactive = <1280>;
-			vactive = <720>;
-			hback-porch = <220>;
-			hfront-porch = <110>;
-			hsync-len = <40>;
-			vback-porch = <20>;
-			vfront-porch = <5>;
-			vsync-len = <5>;
-		};
-	};
-
-	port@0 {
+	port {
 		hdmi_in: endpoint {
 			remote-endpoint = <&dcss_out>;
 		};
@@ -1041,27 +962,26 @@
 
 #if 0
 	ov5640-mipi1@3c {
-		compatible = "ovti,ov5640_mipisubdev";
-		reg = <0x3c>;
-		status = "okay";
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_i2c2_csi1>;
-		clocks = <&clk IMX8MQ_CLK_CLKO2>;
-		clock-names = "csi_mclk";
+		AVDD-supply = <&reg_vref_2v5>;
+		DOVDD-supply = <&reg_vref_1v8>;
+		DVDD-supply = <&reg_vref_3v3>;
 		assigned-clocks = <&clk IMX8MQ_CLK_CLKO2>;
 		assigned-clock-parents = <&clk IMX8MQ_SYS2_PLL_200M>;
-		assigned-clock-rates = <25000000>;
-		csi_id = <0>;
-		AVDD-supply = <&reg_vref_2v5>;
-		DVDD-supply = <&reg_vref_3v3>;
-		DOVDD-supply = <&reg_vref_1v8>;
-		pwn-gpios = GP_CSI1_MIPI_PWDN;
-		rst-gpios = GP_CSI1_MIPI_RESET;
-		mclk = <25000000>;
-		mipi_csi;
+		assigned-clock-rates = <20000000>;
+		clocks = <&clk IMX8MQ_CLK_CLKO2>;
+		clock-names = "xclk";
+		compatible = "ovti,ov5640_mipisubdev";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c2_csi1>;
+		powerdown-gpios = GP_CSI1_MIPI_PWDN;
+		reg = <0x3c>;
+		reset-gpios = GP_CSI1_MIPI_RESET;
+		status = "okay";
 
 		port {
 			ov5640_mipi1_ep: endpoint {
+				clock-lanes = <0>;
+				data-lanes = <1 2>;
 				remote-endpoint = <&mipi1_sensor_ep>;
 			};
 		};
@@ -1086,27 +1006,26 @@
 
 #if 0
 	ov5640-mipi2@3c {
-		compatible = "ovti,ov5640_mipisubdev";
-		reg = <0x3c>;
-		status = "okay";
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_i2c3_csi2>;
-		clocks = <&clk IMX8MQ_CLK_CLKO2>;
-		clock-names = "csi_mclk";
+		AVDD-supply = <&reg_vref_2v5>;
+		DOVDD-supply = <&reg_vref_1v8>;
+		DVDD-supply = <&reg_vref_3v3>;
 		assigned-clocks = <&clk IMX8MQ_CLK_CLKO2>;
 		assigned-clock-parents = <&clk IMX8MQ_SYS2_PLL_200M>;
-		assigned-clock-rates = <25000000>;
-		csi_id = <1>;
-		AVDD-supply = <&reg_vref_2v5>;
-		DVDD-supply = <&reg_vref_3v3>;
-		DOVDD-supply = <&reg_vref_1v8>;
-		pwn-gpios = GP_CSI2_MIPI_PWDN;
-		rst-gpios = GP_CSI2_MIPI_RESET;
-		mclk = <25000000>;
-		mipi_csi;
+		assigned-clock-rates = <20000000>;
+		clocks = <&clk IMX8MQ_CLK_CLKO2>;
+		clock-names = "xclk";
+		compatible = "ovti,ov5640_mipisubdev";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c3_csi2>;
+		powerdown-gpios = GP_CSI2_MIPI_PWDN;
+		reg = <0x3c>;
+		reset-gpios = GP_CSI2_MIPI_RESET;
+		status = "okay";
 
 		port {
 			ov5640_mipi2_ep: endpoint {
+				clock-lanes = <0>;
+				data-lanes = <1 2>;
 				remote-endpoint = <&mipi2_sensor_ep>;
 			};
 		};
@@ -1196,18 +1115,11 @@
 #endif
 
 &lcdif {
-	display = <&fb_mipi>;
-	status = "okay";
+	status = "disabled";
 	assigned-clocks = <&clk IMX8MQ_CLK_LCDIF_PIXEL>,
 			  <&clk IMX8MQ_VIDEO_PLL1_REF_SEL>;
 	assigned-clock-parents = <&clk IMX8MQ_VIDEO_PLL1_OUT>,
 				 <&clk IMX8MQ_CLK_25M>;
-
-	port@0 {
-		lcdif_out: endpoint {
-			remote-endpoint = <&mipi_dsi_bridge_in>;
-		};
-	};
 };
 
 #if 0
@@ -1244,32 +1156,8 @@
 };
 #endif
 
-&mipi_dsi_bridge {
-	ports {
-		#address-cells = <1>;
-		#size-cells = <0>;
-
-		port@0 {
-			reg = <0>;
-
-			mipi_dsi_bridge_in: endpoint {
-				remote-endpoint = <&lcdif_out>;
-			};
-		};
-
-		port@1 {
-			reg = <1>;
-
-			mipi_dsi_bridge_out: endpoint {
-				remote-endpoint = <&panel1_in>;
-			};
-		};
-	};
-};
-
 &mipi_dsi {
 	/delete-property/ no_clk_reset;
-	status = "disabled";
 	assigned-clocks = <&clk IMX8MQ_CLK_DSI_PHY_REF>,
 			  <&clk IMX8MQ_CLK_DSI_CORE>,
 			  <&clk IMX8MQ_CLK_DSI_AHB>,
@@ -1284,19 +1172,16 @@
 			       <80000000>,
 			       <0>,
 			       <20000000>;
-	input-source = "lcdif";
+	status = "disabled";
+	#address-cells = <1>;
+	#size-cells = <0>;
 
 	fb_mipi: panel@0 {
-		#address-cells = <1>;
-		#size-cells = <0>;
-
-		backlight= <&backlight_mipi>;
+		backlight = <&backlight_mipi>;
 		bits-per-color = <8>;
-		bits-per-pixel = <24>;
 		bridge-de-active = <0>;
 		bus-format = "rgb888";
-		bus-width = <24>;
-		clocks = <&dsim_clk 0>,
+		clocks = <&dphy 0>,
 			<&clk IMX8MQ_CLK_LCDIF_PIXEL>;
 		clock-names = "mipi_clk", "pixel_clock";
 		compatible = "panel,common";
@@ -1309,7 +1194,7 @@
 		panel-height-mm = <136>;
 		panel-width-mm = <217>;
 		pinctrl-names = "sn65dsi83";
-		pinctrl-0 = <&pinctrl_sn65dsi83>;
+		pinctrl-0 = <&pinctrl_i2c1d_sn65dsi83>;
 		power-supply = <&reg_vref_5v>;
 		reg = <0>;
 		sn65dsi83 = <&mipi_to_lvds>;
@@ -1334,23 +1219,24 @@
 		};
 
 		mipi_to_lvds: mipi-to-lvds {
-			#address-cells = <1>;
-			#size-cells = <0>;
 			alias = <&mipi_to_lvds>;
 			enable-gpios = GP_I2C1D_SN65DSI83_EN;
 			i2c-address = <0x2c>;
 			i2c-bus = <&i2c1d>;
 			interrupts-extended = GPIRQ_I2C1D_SN65DSI83;
-			interrupts-gpios = GP_I2C1D_SN65DSI83_IRQ;
 			status = "disabled";
 		};
 
-		port@1 {
-			reg = <1>;
-
+		port {
 			panel1_in: endpoint {
-				remote-endpoint = <&mipi_dsi_bridge_out>;
+				remote-endpoint = <&mipi_dsi_out>;
 			};
+		};
+	};
+
+	port {
+		mipi_dsi_out: endpoint {
+			remote-endpoint = <&panel1_in>;
 		};
 	};
 };
@@ -1359,9 +1245,15 @@
 &mu {
 	status = "okay";
 };
-#endif
 
 &pcie0 {
+	assigned-clocks = <&clk IMX8MQ_CLK_PCIE1_AUX>,
+			  <&clk IMX8MQ_CLK_PCIE1_PHY>,
+			  <&clk IMX8MQ_CLK_PCIE1_CTRL>;
+	assigned-clock-parents = <&clk IMX8MQ_SYS2_PLL_50M>,
+				 <&clk IMX8MQ_SYS2_PLL_100M>,
+				 <&clk IMX8MQ_SYS2_PLL_250M>;
+	assigned-clock-rates = <10000000>, <100000000>, <250000000>;
 #if 1
 	clocks = <&clk IMX8MQ_CLK_PCIE1_ROOT>,
 		<&clk IMX8MQ_CLK_PCIE1_AUX>,
@@ -1382,11 +1274,59 @@
 };
 
 &pcie1 {
-	/* TODO check clock */
+	assigned-clocks = <&clk IMX8MQ_CLK_PCIE2_AUX>,
+			  <&clk IMX8MQ_CLK_PCIE2_PHY>,
+			  <&clk IMX8MQ_CLK_PCIE2_CTRL>;
+	assigned-clock-parents = <&clk IMX8MQ_SYS2_PLL_50M>,
+				 <&clk IMX8MQ_SYS2_PLL_100M>,
+				 <&clk IMX8MQ_SYS2_PLL_250M>;
+	assigned-clock-rates = <10000000>, <100000000>, <250000000>;
+	clocks = <&clk IMX8MQ_CLK_PCIE2_ROOT>,
+		<&clk IMX8MQ_CLK_PCIE2_AUX>,
+		<&clk IMX8MQ_CLK_PCIE2_PHY>,
+		<&pcie1_refclk>;
+	clock-names = "pcie", "pcie_aux", "pcie_phy", "pcie_bus";
 	ext_osc = <1>;
-	hard-wired = <1>;
+	hard-wired;
 	status = "disabled";
 };
+#endif
+
+#if 0
+/delete-node/ &pgc_gpu;
+/delete-node/ &pgc_vpu;
+&pgc {
+	pgc_gpuvpu: pgc-gpuvpu {
+		#address-cells = <1>;
+		#power-domain-cells = <0>;
+		#size-cells = <0>;
+		domain-name = "VPUGPU_PD";
+		dvfs-supply = <&reg_soc_gpu_vpu>;
+		idle-microvolt = <900000 837000 990000>;
+
+		pgc_gpu: power-domain@5 {
+			clocks = <&clk IMX8MQ_CLK_GPU_AXI>,
+				 <&clk IMX8MQ_CLK_GPU_SHADER_DIV>,
+				 <&clk IMX8MQ_CLK_GPU_ROOT>,
+				 <&clk IMX8MQ_CLK_GPU_AHB>;
+			reg = <IMX8M_POWER_DOMAIN_GPU>;
+			operating-points-v2 = <&gpu_opp_table>;
+			#power-domain-cells = <0>;
+		};
+
+		pgc_vpu: power-domain@6 {
+			clocks = <&clk IMX8MQ_CLK_VPU_G1_ROOT>,
+				 <&clk IMX8MQ_CLK_VPU_G2_ROOT>,
+				 <&clk IMX8MQ_CLK_VPU_DEC_ROOT>;
+			reg = <IMX8M_POWER_DOMAIN_VPU>;
+			operating-points-v2 = <&vpu_opp_table_g1>,
+					<&vpu_opp_table_g2>,
+					<&vpu_opp_table_dec>;
+			#power-domain-cells = <0>;
+		};
+	};
+};
+#endif
 
 &pwm2 {
 	pinctrl-names = "default";
@@ -1441,7 +1381,6 @@
 };
 #endif
 
-#if 0
 &uart1 { /* console */
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart1>;
@@ -1474,10 +1413,10 @@
 	assigned-clock-parents = <&clk IMX8MQ_CLK_25M>;
 	status = "okay";
 };
-#endif
 
 &usb3_phy0 {
 	status = "okay";
+	vbus-supply = <&reg_vref_5v>;
 };
 
 &usb_dwc3_0 {
@@ -1490,6 +1429,7 @@
 
 &usb3_phy1 {
 	status = "okay";
+	vbus-supply = <&reg_vref_5v>;
 };
 
 &usb_dwc3_1 {
@@ -1498,13 +1438,11 @@
 	pinctrl-0 = <&pinctrl_usb3_1>;
 	reset-gpios = GP_USB3_1_HUB_RESET;
 	status = "okay";
+	vbus-supply = <&reg_vref_5v>;
 };
 
 &usdhc1 {
-	cap-mmc-highspeed;
 	bus-width = <8>;
-	mmc-ddr-1_8v;
-	mmc-hs200-1_8v;
 	fsl,strobe-dll-delay-target = <5>;
 	fsl,tuning-start-tap = <63>;
 	fsl,tuning-step = <2>;
@@ -1520,22 +1458,6 @@
 };
 
 &usdhc2 {
-#ifdef CONFIG_USDHC2_SD
-	cap-sd-highspeed;
-	cd-gpios = GP_USDHC2_CD;
-	bus-width = <4>;
-	pinctrl-names = "default", "state_100mhz", "state_200mhz";
-	pinctrl-0 = <&pinctrl_usdhc2>;
-	pinctrl-1 = <&pinctrl_usdhc2_100mhz>;
-	pinctrl-2 = <&pinctrl_usdhc2_200mhz>;
-	sd-uhs-ddr50;
-	sd-uhs-sdr104;
-	sd-uhs-sdr12;
-	sd-uhs-sdr25;
-	status = "okay";
-	vmmc-supply = <&reg_vref_3v3>;
-	vqmmc-supply = <&reg_usdhc2_vqmmc>;
-#else
 	bus-width = <4>;
 	fsl,tuning-start-tap = <70>;
 	fsl,tuning-step = <2>;
@@ -1547,14 +1469,11 @@
 	pm-ignore-notify;
 	keep-power-in-suspend;
 	non-removable;
-#if 0
 	status = "okay";
-#endif
 	tuning-delay = <32>;
 	tuning-mode = <1>;
 	vmmc-supply = <&reg_wlan_vmmc>;
 	vqmmc-1-8-v;
-#endif
 };
 
 #if 0
