--- a/arch/arm/dts/imx8mq-nitrogen8m.dts
+++ b/arch/arm/dts/imx8mq-nitrogen8m.dts
@@ -10,14 +10,6 @@
 
 #include "imx8mq.dtsi"
 #define TC358867_I2C_BUS	<&i2c4>
-#include "panel-dmt050wvnxcmi.dtsi"
-#include "panel-lcd133-070.dtsi"
-#include "panel-lcm-jm430.dtsi"
-#include "panel-ltk0680ytmdb.dtsi"
-#include "panel-ltk080a60a004t.dtsi"
-#include "panel-m101nwwb.dtsi"
-#include "panel-com50h5n03ulc.dtsi"
-#include "panel-tcxd070iblmat77.dtsi"
 
 &iomuxc {
 	pinctrl-names = "default";
@@ -321,6 +313,8 @@
 		fsl,pins = <
 #define GP_TC358762_EN	<&gpio3 15 GPIO_ACTIVE_HIGH>
 			MX8MQ_IOMUXC_NAND_RE_B_GPIO3_IO15	0x16
+#define GP_JM430_DISPLAY_EN	<&gpio1 1 GPIO_ACTIVE_HIGH>
+			MX8MQ_IOMUXC_GPIO1_IO01_GPIO1_IO1	0x06
 		>;
 	};
 
@@ -589,6 +583,15 @@
 		>;
 	};
 };
+
+#include "panel-com50h5n03ulc.dtsi"
+#include "panel-dmt050wvnxcmi.dtsi"
+#include "panel-lcd133-070.dtsi"
+#include "panel-lcm-jm430.dtsi"
+#include "panel-ltk0680ytmdb.dtsi"
+#include "panel-ltk080a60a004t.dtsi"
+#include "panel-m101nwwb.dtsi"
+#include "panel-tcxd070iblmat77.dtsi"
 
 / {
 	model = "Boundary Devices i.MX8MQ Nitrogen8M";
