dts: imx8mm-nitrogen8mm_som: add GP_JM430_DISPLAY_EN to pinctrl_mipi_lcm_jm430
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/arch/arm/dts/imx8mm-nitrogen8mm_som.dts
+++ b/arch/arm/dts/imx8mm-nitrogen8mm_som.dts
@@ -19,7 +19,6 @@
 
 	pinctrl_sn65dsi83: sn65dsi83grp {
 		fsl,pins = <
-#define GP_SN65DSI83_IRQ <&gpio1 1 GPIO_ACTIVE_HIGH>
 #define GPIRQ_SN65DSI83	<&gpio1 1 IRQ_TYPE_LEVEL_HIGH>
 			MX8MMN(IOMUXC_GPIO1_IO01_GPIO1_IO1, 0x04)
 #undef  GP_SN65DSI83_EN
@@ -83,13 +82,13 @@
 #undef GP_TC358762_EN
 #define GP_TC358762_EN	<&gpio5 0 GPIO_ACTIVE_HIGH>
 			MX8MMN(IOMUXC_SAI3_TXC_GPIO5_IO0, 0x16)
+#define GP_JM430_DISPLAY_EN	<&gpio1 1 GPIO_ACTIVE_HIGH>
+			MX8MMN(IOMUXC_GPIO1_IO01_GPIO1_IO1, 0x106)
 		>;
 	};
 
 	pinctrl_mipi_ls050t1sx12: mipi-ls050t1sx12grp {
 		fsl,pins = <
-#define GP_5P5_EN	<&gpio1 11 GPIO_ACTIVE_HIGH>
-			MX8MMN(IOMUXC_GPIO1_IO11_GPIO1_IO11, 0x141)
 #define GP_MIPI_RESET	<&gpio5 0 GPIO_ACTIVE_LOW>
 			MX8MMN(IOMUXC_SAI3_TXC_GPIO5_IO0, 0x16)
 		>;
